# cflowlight

./: .gitignore  CMakeLists.txt  conanfile.txt
example/: ndarray_dtype.cpp  ndarray_init.cpp  ndarray_ops.cpp
include/cflowlight/autograd/: ops.h  tensor.h
include/cflowlight/common/: defines.h  dtype.h  shape.h  stride.h
include/cflowlight/ndarray/: ndarray.h  ndarray.hpp  storage.h
include/cflowlight/ndarray/init/: init_basic.h
include/cflowlight/utils/: timer.hpp
src/autograd/: ops.cpp  tensor.cpp
src/ndarray/: matmul.cpp  ndarray.cpp
src/ndarray/init/: init_basic.cpp
